# Sistema_Gestion_Solicitudes_RAG

./: .env.example  .gitignore  README.md  constraints.txt  ingestion_pipeline.py  pyproject.toml  requirements.txt
docs/: Acuerdo_0003_de_2024_CF.html  Acuerdo_0009_de_2025_CF.html  Acuerdo_0018_de_2024_CF.html  Acuerdo_0019_de_2024_CF.html  Acuerdo_0020_de_2024_CF.html  Acuerdo_0021_de_2024_CF.html  Acuerdo_0022_de_2024_CF.html  Acuerdo_008_de_2008_CSU.html  Acuerdo_024_de_2019_CBU.html  Acuerdo_025_de_2017_CSU.html  Acuerdo_026_de_2012_CA.html  Acuerdo_027_de_2010_CSU.html  Acuerdo_032_de_2010_CSU.html  Acuerdo_033_de_2007_CSU.html  Acuerdo_034_de_2023_CSU.html  Acuerdo_044_de_2009_CSU.html  Acuerdo_070_de_2009_CA.html  Acuerdo_089_de_2014_CA.html  Acuerdo_100_de_2015_CA.html  Acuerdo_102_de_2013_CSU.html  Acuerdo_155_de_2014_CSU.html  Acuerdo_230_de_2016_CSU.html  Acuerdo_26_de_2019_CF.html  Acuerdo_29_de_2019_CF.html  Acuerdo_32_de_2019_CF.html  Acuerdo_34_de_2019_CF.html  Acuerdo_350_de_2021_CSU.html  Acuerdo_355_de_2021_CSU.html  Acuerdo_6_de_2022_CF.html  Circular_002_de_2013_VRA.html  Circular_003_de_2013_VRA.html  Circular_004_de_2013_VRA.html  Circular_007_de_2010_VRA.html  Circular_009_de_2016_Rectoria.html  Circular_02_de_2019_VRA.html  Circular_02_de_2021_VRA.html  Circular_03_de_2018_VRA.html  Circular_04_de_2014.html  Circular_05_de_2014_VRA.html  Circular_05_de_2019_VRA.html  (+21 more)
src/: ingestion_pipeline.py  llm_config.py  main.py  prompt_loader.py  state.py
src/nodes/: evaluator.py  generator.py  memory.py  retriever.py  router.py  (+2 more)
tests/: test_doctor.py
(+19 files in other folders)
