[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unal-rag"
version = "0.1.0"
description = "Agentic RAG CLI for UNAL regulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0",
  "langgraph-checkpoint-sqlite",
]

[project.scripts]
unal-rag = "unal_rag.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
